[package]
name = "hash_checker"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Yekong995/HashChecker"
description = "A simple tool to check the hash of a file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.6"
sha2 = "0.10.7"
md-5 = "0.10.5"
digest = "0.10.7"
clap = {version = "4.4.3", features = ["derive"]}

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
